--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     He shows <select data-answer="the"></select> card to Małgosia and asks her “was this <select data-answer="the"></select> card you chose?” She replies that it was. 
     <select data-answer="The"></select> audience goes wild. Małgosia returns to her seat. 
     Francisco <select data-answer="the"></select> Magnificent takes <select data-answer="a"></select> deep bow, but as he does, he accidentally knocks <select data-answer="the"></select> deck of cards against his knee, and <select data-answer="the"></select> cards fall to <select data-answer="the"></select> stage floor. 
-    <select data-answer="The"></select> audience members in <select data-answer="the"></select> front row can now see that <select data-answer="the"></select> entire deck is made up 52 cards, all of which are <select data-answer="the"></select> Ten of Spades.
+    <select data-answer="The"></select> audience members in <select data-answer="the"></select> front row can now see that <select data-answer="the"></select> entire deck is made up of 52 cards, all of which are <select data-answer="the"></select> Ten of Spades.
   </p>
   <p>
     <select data-answer="A"></select> huge white rabbit bounds onto <select data-answer="the"></select> stage after Francisco <select data-answer="the"></select> Magnificent has left. 
     <select data-answer="The"></select> rabbit is wearing <select data-answer="a"></select> very tall, black, top hat. 
     <select data-answer="The"></select> rabbit then announces to <select data-answer="the"></select> assembled audience “I will now perform <select data-answer="a"></select> feat of magic that will astound and confound you. 
     I will extract <select data-answer="the"></select> great Francisco <select data-answer="the"></select> now-not-quite-so-Magnificent from my top hat!” and then proceeds to do exactly as predicted. 
-    <select data-answer="The"></select> audience is shocked and awe stuck. They have never before seen <select data-answer="a"></select> rabbit wearing <select data-answer="a"></select> hat!
+    <select data-answer="The"></select> audience is shocked and awe struck. They have never before seen <select data-answer="a"></select> rabbit wearing <select data-answer="a"></select> hat!
   </p>
   <p>
     Francisco <select data-answer="the"></select> now-not-quite-so-Magnificent now stands in front of <select data-answer="the"></select> audience knowing he has to regain their trust, so he calls on another member of <select data-answer="the"></select> audience to come up on <select data-answer="nothing"></select> stage. 
